--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
         <source src="/res/atlasora.mp4" type="video/mp4">
     </video>
 
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
     <script>
         (function(){
           const form = document.getElementById('earlyaccess');
